[feat] Added the request for permission on the health kit

--- a/appChallenge/Info.plist
+++ b/appChallenge/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSHealthShareUsageDescription</key>
+	<string>&quot;Please share with us your activity&quot;</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>&quot;Please let us write data in your Healt app&quot;</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
